last-try/liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: ready-if-service-ready
  name: ready-if-service-ready
spec:
  containers:
    - image: nginx:1.16.1-alpine
      imagePullPolicy: IfNotPresent
      livenessProbe:
        exec:
          command:
            - wget
            - -T2
            - -O-
            - http://service-am-i-ready:80
        failureThreshold: 3
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      name: nginx
      readinessProbe:
        exec:
          command:
            - "true"
        failureThreshold: 3
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
