last-try/luna-ingress-hostless.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 80
            path: /
            pathType: Exact
