last-try/luna-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: backend
spec:
  podSelector:
    matchLabels:
      run: nginx-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: frontend
      ports:
        - protocol: TCP
          port: 80 #todo
